<resources>
    <string name="app_name">Massend</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!--login activity and layout-->
    <string name="login_layout_button">Zaloguj się</string>
    <string name="login_layout_hint_login">Login</string>
    <string name="login_layout_hint_password">Hasło</string>
    <string name="login_activity_toast_short_login">Za krótki login! Minimalna długość loginu: %1$d</string>
    <string name="login_activity_toast_short_password">Za krótkie hasło! Minimalna długość hasła: %1$d</string>
    <string name="login_activity_toast_wrong_password">Niepoprawne hasło!</string>
    <string name="login_activity_toast_wrong_credentials">Nie ma takiego użytkownika!</string>

    <!--main menu activity and layout-->
    <string name="title_activity_main_menu">Menu główne</string>
    <string name="main_menu_layout_button_writemessage">Napisz wiadomość</string>
    <string name="main_menu_layout_button_settings">Ustawienia</string>

    <!--write message activity and layout-->
    <string name="title_activity_write_message">Napisz wiadomość</string>
    <string name="write_message_button_send">Wyślij wiadomość</string>
    <string name="write_message_button_templates">Wybierz szablon</string>
    <string name="write_message_button_show_recipients">Pokaż odbiorców</string>
    <string name="write_message_button_choose_recipients">Wybierz odbiorców</string>
    <string name="write_message_dialog_recipients_title">Wybrani odbiorcy</string>
    <string name="write_message_dialog_no_recipients_chosen">Nie wybrano jeszcze żadnego odbiorcy!</string>
    <string name="write_message_warning_no_content">Żeby wysłać wiadomość, musisz wprowadzić treść</string>

    <!--templates activity-->
    <string name="title_activity_templates">Szablony wiadomości</string>
    <string name="templates_delete_warning">Zamierzasz usunąć %1$s. Czy jesteś pewien?</string>
    <string name="templates_add_new">Dodaj nowy szablon</string>

    <!--template edit/add activity-->
    <string name="title_activity_template_edit_add">Dodaj/Edytuj szablon</string>
    <string name="template_edit_add_new_template_message">Nowy szablon</string>
    <string name="template_edit_add_edited_template_message">Edytujesz szablon: %1$s</string>
    <string name="template_edit_add_change_title">Zmień nazwę szablonu</string>
    <string name="template_edit_add_save_template">Zapisz szablon</string>
    <string name="template_edit_add_change_title_hint">Wprowadź nową nazwę</string>
    <string name="template_edit_add_dialog_edit_title_new_template_title">Nowy szablon</string>
    <string name="template_edit_add_dialog_backbutton_message">Czy chcesz zapisać wprowadzone zmiany?</string>

    <!--contacts activity-->
    <string name="contacts_title">Wybierz odbiorców</string>

    <!--shared-->
    <string name="placeholder">Placeholder</string>
    <string name="dialog_yes">Tak</string>
    <string name="dialog_no">Nie</string>
    <string name="dialog_save">Zapisz</string>
    <string name="dialog_cancel">Anuluj</string>
    <string name="dialog_warning">Uwaga!</string>
    <string name="title_activity_contacts">ContactsActivity</string>
</resources>
