<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.piotr.massend.WriteMessageActivity">

    <Button
        android:id="@+id/tea_save_template"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/template_edit_add_save_template"
        android:layout_marginTop="5dp"/>

    <LinearLayout
        android:id="@+id/tea_top_holder"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tea_editing"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/template_edit_add_new_template_message"
            android:gravity="center"/>
        <Button
            android:id="@+id/tea_change_title"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/template_edit_add_change_title"/>
    </LinearLayout>

    <EditText
        android:id="@+id/tea_main_input"
        android:layout_above="@id/tea_save_template"
        android:layout_below="@id/tea_top_holder"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:inputType="textMultiLine"
        android:gravity="top"
        android:padding="3dp"
        android:background="@drawable/textview_border"
        tools:ignore="Deprecated,TextViewEdits" />
</RelativeLayout>
